samples/_failures_safe/1761699641_79a019_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_d501e26f.c: In function ‘main’:
./samples/SAFE/__tmp_d501e26f.c:156:12: error: missing terminating " character
  156 |     printf("2.
      |            ^~~
./samples/SAFE/__tmp_d501e26f.c:156:5: error: expected expression at end of input
  156 |     printf("2.
      |     ^~~~~~
./samples/SAFE/__tmp_d501e26f.c:156:5: error: expected declaration or statement at end of input
